--- a/index.html
+++ b/index.html
@@ -267,15 +267,15 @@
 
     <section class="gallery fade-in">
         <div class="gallery-item">
-            <img src="/api/placeholder/300/200" alt="Романтичний захід сонця" />
+            <img src="./love_1.jpg" alt="Романтичний захід сонця" />
             <p>Романтичний захід сонця</p>
         </div>
         <div class="gallery-item">
-            <img src="/api/placeholder/300/200" alt="Квіти кохання" />
+            <img src="./love_2.jpg" alt="Квіти кохання" />
             <p>Квіти кохання</p>
         </div>
         <div class="gallery-item">
-            <img src="/api/placeholder/300/200" alt="Святковий настрій" />
+            <img src="./love_3.jpg" alt="Святковий настрій" />
             <p>Святковий настрій</p>
         </div>
     </section>
