--- a/index.html
+++ b/index.html
@@ -253,37 +253,37 @@
         <div class="floating-hearts" id="hearts"></div>
         <div class="content">
             <h1>З Днем Закоханих, моя найсолодша! ❤️</h1>
-            <p>День, коли кохання наповнює кожне серце особливим теплом...</p>
+            <p>День, коли кохання заповнює наші серця особливим теплом...</p>
         </div>
     </section>
 
     <section class="story fade-in">
         <div class="content">
-            <h2>Історія кохання</h2>
-            <p>Кохання - це найпрекрасніше почуття у світі. Воно надихає нас на великі справи, додає сил та енергії, робить наше життя яскравішим та щасливішим. У День святого Валентина ми маємо чудову нагоду висловити свої почуття тим, кого любимо.</p>
-            <p>Цей день став символом романтики та ніжності, днем, коли ми можемо відкрито говорити про свої почуття та дарувати радість близьким людям.</p>
+            <h2>Моя королева</h2>
+            <p>Одного дня я насмілився зізнатись прекрасній дівчинці в коханні, до смерті переживав, зараз і на все життя ця дівчинка - моя кохана, булочка моя солоденька, моє сонечко, серденько, янголятко, щастячко, зіронька, квіточка, бубочка моя найсолодша. Я неймовірно щасливий, що одного дня ця чарівна принцеса відповіла мені взаємністю. Ти моя чарівна принцеса і прекрасна дівчинка, ти моє натхнення, моє життя і мій всесвіт, дуже дуже сильно кохаю тебе, крихітко, дякую, що ти в мене є!❤️❤️❤️❤️❤️</p>
+            <p></p>
         </div>
     </section>
 
     <section class="gallery fade-in">
         <div class="gallery-item">
             <img src="./love_1.jpg" alt="Романтичний захід сонця" />
-            <p>Романтичний захід сонця</p>
+            <p>Моє мишенятко ❤️</p>
         </div>
         <div class="gallery-item">
             <img src="./love_2.jpg" alt="Квіти кохання" />
-            <p>Квіти кохання</p>
+            <p>Цьомчики біля Вацака пхпхпз😚😘❤️</p>
         </div>
         <div class="gallery-item">
             <img src="./love_3.jpg" alt="Святковий настрій" />
-            <p>Святковий настрій</p>
+            <p>Моя найсолодша 🥹❤️</p>
         </div>
     </section>
 
     <section class="message fade-in">
         <div class="content">
-            <h2>Відправте валентинку</h2>
-            <p>Зробіть цей день особливим для когось особливого у вашому житті. Відправте валентинку з теплими словами та побажаннями.</p>
+            <h2>Мишенятко моє</h2>
+            <p>Хочу ще дещо сказати, моя солоденька!</p>
             <a href="#" class="button-link" id="buttonLink">
                 <div class="heart-button" id="sendLove">Туцьни туть!</div>
             </a>
