--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <div class="content">
             <h2>Мишенятко моє</h2>
             <p>Хочу ще дещо сказати, моя солоденька!</p>
-            <a href="#" class="button-link" id="buttonLink">
+            <a href="https://githubloverornie.github.io/valentunik/" class="button-link" id="buttonLink" target="blank">
                 <div class="heart-button" id="sendLove">Туцьни туть!</div>
             </a>
         </div>
